# minispot

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  kernel-deps.txt  package.json  pdm-deps.txt  playwright.config.mjs  pyproject.toml  tsconfig.eslint.json
.devcontainer/: devcontainer.json
.github/workflows/: check.yml
jupyter/: jupyter_server_config.json
jupyter/labconfig/: page_config.json
minispot/: __init__.py  __main__.py  database.py  kernelmanager.py  main.py
tests/: tests.spec.ts
