[project]
name = "minispot"
requires-python = ">=3.11"
dependencies = ["notebook>=7.4.2"]
version = "0.0.0"

[project.scripts]
minispot = "minispot.__main__:main"

[build-system]
requires = []
build-backend = "hatchling.build"

[dependency-groups]
dev = ["hatchling>=1.27.0", "editables>=0.5", "ruff>=0.11.9"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint.composite = [
  "ruff check .",
  "jlpm run eslint .",
  "jlpm run prettier --check ."
]
fix.composite = [
  "ruff format .",
  "jlpm run eslint --fix .",
  "jlpm run prettier --write ."
]
